# nolang-mcp

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  run.py
api-docs-for-claude-coding/: developer-guide.md
nolang_mcp/: api_client.py  config.py  models.py  server.py
nolang_mcp/runner/: run_http.py  run_stdio.py
src/nolang_mcp/: server.py
