[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[project]
name = "nolang-mcp"
version = "0.0.1"
description = "NoLang MCP Server for AI Video Generation"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Mavericks, inc.", email = "support.nolang@mvrks.co.jp"}
]
keywords = ["nolang", "mcp", "claude", "ai", "video"]
dependencies = [
    "mcp[cli]>=1.6.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
nolang-mcp = "nolang_mcp.server:main"

[project.optional-dependencies]
dev = [
    "ruff",
    "uv",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"


[[tool.uv.index]]
name        = "testpypi"
url         = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit    = true
