[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[project]
name = "nolang-mcp"
version = "0.0.2"
description = "NoLang MCP Server for AI Video Generation"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Mavericks, inc.", email = "support.nolang@mvrks.co.jp"}
]
keywords = ["nolang", "mcp", "claude", "ai", "video"]
dependencies = [
    "fastmcp>=2.11.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[tool.uv.build-backend]
module-root = ""

[project.scripts]
nolang-mcp = "nolang_mcp.runner.run_stdio:main"
nolang-mcp-stdio = "nolang_mcp.runner.run_stdio:main"
nolang-mcp-http = "nolang_mcp.runner.run_http:main"

[project.optional-dependencies]
dev = [
    "ruff",
    "uv",
    "mypy",
]

[tool.pyright]
typeCheckingMode = "strict"
reportAttributeAccessIssue = "error"
reportOptionalMemberAccess = "information"
reportGeneralTypeIssues = "warning"
reportOperatorIssue = "error"
reportMissingTypeStubs = "none"
reportPossiblyUnboundVariable = "information"
reportUnnecessaryComparison = "information"

[tool.mypy]
ignore_missing_imports = true
python_version = "3.12"
plugins = ["pydantic.mypy"]
check_untyped_defs = true
disallow_any_generics = false
disable_error_code = ["attr-defined", "arg-type", "var-annotated", "union-attr"]
implicit_optional = true
strict_equality = true

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
ignore = ['E203','E501','E722','F401','E741']
extend-select = ["TID", "PD"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"


[[tool.uv.index]]
name        = "testpypi"
url         = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit    = true
